--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "camelcase": "^6.2.0",
     "camelcase-keys": "^7.0.0",
     "camelcase-object-deep": "^1.1.4",
+    "chart.js": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
